# pyrsd

./: LICENSE  README.md  pyproject.toml
pyrsd/: __init__.py
pyrsd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyrsd/core/: calibration.py  filters.py  processing.py  stats.py
pyrsd/core/physics/: fields.py  gas.py  optics.py
pyrsd/core/solvers/: abel.py  integration.py  poisson.py
pyrsd/utils/: export.py  io.py
