[project]
name = "pyrsd"
version = "0.0.1"
description = "Rainbow Schlieren Deflectometry processing library"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "matplotlib",
]

[project.optional-dependencies]
abel = ["PyAbel"]
denoising = ["sickit-image","bm3d"]

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrsd*"]
